<resources>

    <string name="app_name">漫步云端</string>
    <string name="copyright">CopyRight @2014 Designed by Spaceship</string>
    <string name="forum">交流论坛</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="forum_index_title1">分类论坛</string>
    <string name="forum_index_title2">帖子排名</string>
    <string name="forum_index_title3">今日热门</string>
    <string name="forum_detail_title1">相关帖子</string>
    <string name="forum_detail_title2">帖子评论</string>
    <string name="forum_release_title1">帖子标题</string>
    <string name="forum_release_title2">发帖版块</string>
    <string name="forum_release_title3">帖子类型</string>
    <string name="forum_release_title4">发帖信息</string>
    <string name="forum_release_title5">帖子图片</string>
    <string name="forum_release_title6">帖子资源</string>
    <string name="forum_movie_title1">版块帖子</string>
    <string name="forum_search_title1">搜索结果</string>
    <string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="loginbutton">登录</string>
	<string name="newuser">新用户</string>
	<string name="regusername">填写一个用户名</string>
	<string name="regpassword">填写您的密码</string>
	<string name="regnickname">填写您的昵称</string>
	<string name="regpassagain">再次输入您的密码</string>
	<string name="reglocation">填写您所在的城市地址</string>
	<string name="regist">现在注册</string>
	<string name="store">交易商城</string>
	<string name="time">发布时间</string>
	<string name="price">价格</string>
	<string name="notice">关注度</string><string name="change_password">修改密码</string>
    <string name="change_detail_information">修改信息</string>
    <string name="cancel">取消修改</string>
    <string name="friend_nickname">好友昵称</string>
    <string name="friend_information">备注信息</string>
    <string name="friend_account">好友账号</string>   
    <string name="hint_private_password">请输入当前密码</string>
    <string name="hint_new_password">请输入当前密码</string>
    <string name="hint_confirm_password">请输入当前密码</string>
    <string name="hint_password">请输入当前密码</string>
    <string name="private_password">当前密码</string>
    <string name="new_password">更新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="operation_list">操作列表</string>
    <string name="default_nickname">默认昵称</string>
    <string name="commodity_name">商品名称</string>
    <string name="image_commodity">商品图片</string>
    <string name="commodity_describe">商品描述</string>
    <string name="commodity_price">商品价格</string>
    <string name="commodity_owner_name">卖家信息</string>
    <string name="commodity_location">商品地址</string>
    <string name="commodity_information">商品详情</string>
    <string name="function_popup_window_chat">发起会话</string>
    <string name="function_popup_window_search_friends">搜索好友</string>
    <string name="function_popup_window_search_position">云端地图</string>
    <string name="function_popup_window_share">云端分享</string>
    <string name="function_popup_window_finish_order">完成交易</string>    
    <string name="operation_popup_window_return_store">返回商城</string>
    <string name="operation_popup_window_return_forum">返回论坛</string>
    <string name="operation_popup_window_return_index">返回主页</string>
    <string name="operation_popup_window_setting">相关设置</string>
    <string name="operation_popup_window_cancel">退出登录</string>    
    <string name="information_person">基本信息</string>
    <string name="information_person_detial_information">详细信息</string>
    <string name="information_person_update_information">修改信息</string>
    <string name="information_person_update_password">修改密码</string>
    <string name="information_person_friend_infromation">好友信息</string>
    <string name="information_person_userPhoto_path">用户头像</string>
    <string name="information_person_score">用户积分</string>
    <string name="information_person_userStatus">用户等级</string>
    <string name="information_person_nickName">用户昵称</string>
    <string name="information_person_gender">用户性别</string>
    <string name="information_person_major">用户专业</string>
    <string name="information_person_location">用户住址</string>
    <string name="information_person_phone">联系方式</string>
    <string name="information_person_postCode">用户邮编</string>
    <string name="information_person_email">电子邮箱</string>
    <string name="information_person_hobby">个人爱好</string>
    <string name="information_store">商城信息</string>
    <string name="information_forum">论坛信息</string>
    <string name="content_description"></string>
    <string name="information_store_sell_produces">交易商品</string>
    <string name="information_store_exchange_produces">交换商品</string>
    <string name="information_store_float_produces">漂流商品</string>
    <string name="information_store_attention_produces">关注商品</string>
    <string name="information_store_orders">订单信息</string>
    <string name="information_forum_release_posts">已发帖子</string>
    <string name="information_forum_read_posts">已读帖子</string>
    <string name="information_forum_attention_posts">关注帖子</string>
    <string name="action_settings">Settings</string>

</resources>
