<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#757575"
        android:orientation="horizontal"
        android:padding="0.5dp" >

        <Button
            android:id="@+id/timesort"
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_sort"
            android:padding="2dp"
            android:text="@string/time" />

        <Button
            android:id="@+id/pricesort"
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/button_sort"
            android:padding="2dp"
            android:text="@string/price" />

        <Button
            android:id="@+id/noticesort"
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="1"
            android:background="@drawable/button_sort"
            android:padding="2dp"
            android:text="@string/notice" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstcommodity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>