<?xml version="1.0" encoding="utf-8"?>
<!-- 界面外围的的整体布局风格 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp" >

    <!-- 添加一个TextView文本组件标签 -->
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">"
    <TextView
        android:id="@+id/change_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/change_password"
        android:textColor="@color/orangered"
        android:textSize="30sp" 
        android:fontFamily="粗体"/>

    <!-- 添加一个LinearLyou布局组件 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/style_elements"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- 上半部分：TableLayout完成我们的标签和编辑文本框 -->

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:stretchColumns="1" >

            <!-- 第一行组件标签 -->

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <!-- 添加文本标签 -->

                <TextView
                    android:id="@+id/private_password1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_password"
                    android:textColor="@color/orangered"
                    android:textSize="15sp" />

                <!-- 添加一个编辑文本框 -->

                <EditText
                    android:id="@+id/private_password"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/hint_private_password"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>

            <!-- 第二行组件标签 -->

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" >

                <!-- 添加文本标签 -->

                <TextView
                    android:id="@+id/new_password1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textColor="@color/orangered"
                    android:textSize="15sp" />

                <!-- 添加一个编辑文本框 -->

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/confirm_password1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textColor="@color/orangered"
                    android:textSize="15sp" />

                <!-- 添加一个编辑文本框 -->

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/email_key1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="验证密码"
                    android:textColor="@color/orangered"
                    android:textSize="15sp" />

                <!-- 添加一个编辑文本框 -->

                <EditText
                    android:id="@+id/email_key"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/style_edit_text"
                    android:hint="验证密码"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>

        <!-- 下半部分：LinearLayout实现按钮组件的添加 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_author"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/style_button_cancel"
                android:text="获取验证码"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="10dp"  />

            <!-- 添加一个立即注册按钮 -->

            <Button
                android:id="@+id/button_change_password"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_button_change_password"
                android:text="@string/change_password"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <!-- 添加一个马上登录按钮 -->

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/style_button_cancel"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="15sp" 
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>