<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/header" >

        <Button
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_header"
            android:text="返回"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:text="注册"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@drawable/registback"
        android:orientation="vertical"
         >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="230dp"
            android:layout_marginTop="215dp"
            android:orientation="vertical"
            android:background="@drawable/registtext" >

            <EditText
                android:id="@+id/regusername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/regusername"
                android:inputType="text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/regnickname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/regnickname"
                android:inputType="text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/regpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/regpassword"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/regpassagain"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/regpassagain"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/regsex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="115dp"
                android:layout_marginTop="7dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="女" />
            </RadioGroup>

            <EditText
                android:id="@+id/reglocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/reglocation"
                android:inputType="text"
                android:textSize="18sp" />

            
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/regist"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_login"
                android:text="@string/regist"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>